# perso-2025b-OtavioZimmer

./: README.md
Main/: index.html  projeto.cabal
game/: GameLogic.hs  Main.hs  Tests.hs  Words.hs  projeto.cabal
v1/: LICENSE  Main.hi  Main.hs  Words.hi  Words.hs  index.html  pagina.html  projeto.cabal
v1/dist-newstyle/cache/: compiler  config
v2/: CHANGELOG.md  Main.hi  Main.hs  README.md  Words.hi  Words.hs  acrostic.db  index.html
v2/dist-newstyle/cache/: compiler  config
