cabal-version:      2.2
name:               projeto
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Otavio
maintainer:         otaviokrugelzimmer@gmail.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable projeto
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.3.0,
                      scotty,
                      aeson,
                      random,
                      wai-middleware-request-logger,
                      time
    hs-source-dirs:   exe
    default-language: GHC2021
