cabal-version:      2.2
name:               projeto
version:            0.1.0.0
license:            BSD-3-Clause
author:             Otavio
maintainer:         otaviokrugelzimmer@gmail.com
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
  ghc-options: -Wall

executable projeto
  import:           warnings
  main-is:          Main.hs
  build-depends:    base ^>=4.18.3.0,
                    scotty,
                    aeson,
                    random,
                    wai-extra,
                    time,
                    sqlite-simple,
                    text
  hs-source-dirs:   .
  default-language: GHC2021
  other-modules:    GameLogic, Words

test-suite tests
  type:             exitcode-stdio-1.0
  main-is:          Tests.hs
  build-depends:    base ^>=4.18.3.0,
                    HUnit,
                    projeto
  hs-source-dirs:   .
  default-language: GHC2021